tests/feature_tests/snapshots/e2e__feature_tests__unalias__Bash.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
fnm install 11.10.0
fnm install 8.11.3
fnm alias 8.11.3 version8
fnm ls | grep version8
fnm unalias version8
fnm use version8 2>&1 | grep 'Requested version version8 is not currently installed'
